# EcoGrow

./: ,gitignore  .gitignore  .gitmodules  Dockerfile  EfficientNet_experiment.py  README.md  clip_experiment.py  clip_lora_prompting_experiment.ipynb  datasets.dvc  inference_service.py  prompt_learners.py  prompts.json  pyproject.toml  requirements.txt  trainers.py  utils.py
.dvc/: config
.github/workflows/: tests.yml
artifacts/: .gitignore
docs/: DOCKER.md
ecogrow/: __init__.py
ecogrow/benchmark/: __init__.py  ecogrow_benchmark.py
ecogrow/data/: __init__.py  plant_data.py
ecogrow/models/: __init__.py  checkpoint_cache.py  model_wrappers.py  open_clip_wrapper.py
ecogrow/preprocessing/: __init__.py  image_segmentator.py
ecogrow/training/: __init__.py  prompt_learners.py  trainers.py
experiment/clip_prompts/: Araceae.pt  Asparagaceae.pt  index.json
experiments/: clip_experiment.py  clip_finetune_experiment.py  clip_lora_experiment.py  clip_lora_prompting_experiment.py  clip_prompting_experiment.py  convnext_finetune_experiment.py  prompts.json  prompts_2.json  utils.py
experiments/clip_prompts/: results.csv
experiments/convnext_convnext_small/: convnext_class_names.json
inference/: Dockerfile  inference_service.py
scripts/: config_lora.py  format_roboflow.py
