[tool.poetry]
name = "ecogrow"
version = "0.1.0"
description = "EcoGrow ML components and benchmarks."
authors = ["EcoGrow Team <team@ecogrow.local>"]
packages = [{ include = "ecogrow" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
flask = ">=3.0.0"
gunicorn = ">=21.2.0"
open-clip-torch = ">=2.24.0"
torch = { version = "2.2.2+cpu", source = "pytorch-cpu" }
torchvision = { version = "0.17.2+cpu", source = "pytorch-cpu" }
pillow = ">=10.0.0"
numpy = ">=1.24.0,<2.0.0"
rembg = ">=2.0.50"
roboflow = ">=1.1.22"
onnxruntime = { version = ">=1.15.0", markers = "platform_system != 'Darwin'" }
onnxruntime-silicon = { version = ">=1.15.0", markers = "platform_system == 'Darwin'" }

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"
